# rust-payments-engine

./: .gitignore  Cargo.toml  README.md
benches/: parsing_strategies.rs
benches/fixtures/: benchmark_medium.csv  benchmark_small.csv
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/core/: account_manager.rs  engine.rs  mod.rs  traits.rs  transaction_store.rs
src/core/async/: account_manager.rs  batch_processor.rs  engine.rs  mod.rs  transaction_store.rs
src/io/: async_reader.rs  csv_format.rs  mod.rs  sync_reader.rs
src/strategy/: async.rs  mod.rs  sync.rs
src/types/: account.rs  error.rs  mod.rs  transaction.rs
tests/: e2e_tests.rs
tests/fixtures/boundary_values/: expected.csv  input.csv
tests/fixtures/dispute_resolution/: expected.csv
tests/fixtures/duplicate_transactions/: expected.csv  input.csv
tests/fixtures/insufficient_funds/: expected.csv  input.csv
tests/fixtures/invalid_references/: expected.csv  input.csv
tests/fixtures/locked_account/: input.csv
tests/fixtures/malformed_data/: expected.csv  input.csv
tests/fixtures/multiple_clients/: expected.csv  input.csv
tests/fixtures/non_disputed_references/: expected.csv  input.csv
tests/fixtures/precision_testing/: expected.csv  input.csv
